frontend/test/should_fail/index_count_edge_fromto_argument2_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	if{ countEdgesFromIndexFromTo(fooi, enu::qux, 42.0) > 0; }
	
	modify {
	}
}
